# asbg

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  python-app.yml
src/asbg/: __init__.py  app.py  cli.py  interclubs.py  logger.py  results.py  utils.py
src/asbg/config/: logging.yaml  teams.yaml
src/asbg/dashboard/: app.py  app_streamlit.py
src/asbg/data/: data.db
src/asbg/entrainements/: README.md
src/asbg/interclubs/: cli.py  database.py  interclubs.py  results.py
src/asbg/interclubs/dashboard/: app.py
src/asbg/interclubs/data/: data.db
src/asbg/teams/: README.md  cli.py  drawing.py  ranking.py
src/asbg/teams/data/: example-criteria-wide.csv  example-criteria.csv  example-rankings.csv
src/asbg/teams/utils/: generate_example_criteria.py  generate_example_rankings.py  generate_players_criteria.py  generate_players_rankings.py  reshape_players_criteria.py
src/asbg/utils/: constants.py  logger.py
tests/asbg/interclubs/: test_results.py
tests/asbg/teams/utils/: test_generate_example_rankings.py  test_generate_players_rankings.py
